[gd_scene load_steps=3 format=3 uid="uid://ckqa8mhwfycim"]

[ext_resource type="Script" path="res://Script/RandomPlayer.gd" id="1_0gt76"]
[ext_resource type="Texture2D" uid="uid://b74bsbisxfumb" path="res://Assets/seta-direita.png" id="2_1flkl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0gt76")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -76.0
offset_right = 93.5
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="SelectedPlayerLabel" type="Label" parent="TextureRect/VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Jogador Selecionado!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LeftArrow" type="VBoxContainer" parent="TextureRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 23

[node name="PlayerSelection1" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow/PlayerSelection1"]
position = Vector2(9.5, 12)
texture = ExtResource("2_1flkl")

[node name="PlayerSelection2" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow/PlayerSelection2"]
position = Vector2(9.5, 12)
texture = ExtResource("2_1flkl")

[node name="PlayerSelection3" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow/PlayerSelection3"]
position = Vector2(9.5, 12)
texture = ExtResource("2_1flkl")

[node name="PlayerSelection4" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/LeftArrow/PlayerSelection4"]
position = Vector2(9.5, 12)
texture = ExtResource("2_1flkl")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 25
alignment = 1

[node name="Player1" type="Label" parent="TextureRect/VBoxContainer2/HBoxContainer/VBoxContainer" groups=["Player"]]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" type="Label" parent="TextureRect/VBoxContainer2/HBoxContainer/VBoxContainer" groups=["Player"]]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player3" type="Label" parent="TextureRect/VBoxContainer2/HBoxContainer/VBoxContainer" groups=["Player"]]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player4" type="Label" parent="TextureRect/VBoxContainer2/HBoxContainer/VBoxContainer" groups=["Player"]]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightArrow" type="VBoxContainer" parent="TextureRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 23

[node name="PlayerSelection1" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow/PlayerSelection1"]
position = Vector2(9.5, 12)
rotation = 3.14159
texture = ExtResource("2_1flkl")

[node name="PlayerSelection2" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow/PlayerSelection2"]
position = Vector2(9.5, 12)
rotation = 3.14159
texture = ExtResource("2_1flkl")

[node name="PlayerSelection3" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow/PlayerSelection3"]
position = Vector2(9.5, 12)
rotation = 3.14159
texture = ExtResource("2_1flkl")

[node name="PlayerSelection4" type="MarginContainer" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow" groups=["PlayerSelection"]]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/VBoxContainer2/HBoxContainer/RightArrow/PlayerSelection4"]
position = Vector2(9.5, 12)
rotation = 3.14159
texture = ExtResource("2_1flkl")

[node name="PlayButton" type="Button" parent="TextureRect/VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Play"

[connection signal="pressed" from="TextureRect/VBoxContainer2/PlayButton" to="." method="_on_play_button_pressed"]
